<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GFMonitor</string>
    <string name="action_settings">Settings</string>
    <string name="enterButton">Enter APP</string>
    <string name="mainText">主界面</string>
    <string name="main1">主页</string>
    <string name="main2">好友</string>
    <string name="main3">设置</string>
    <string name="contentDescription">contentDescription</string>
    <string name="versionCheck">版本更新</string>
    <string name="login">登录</string>
    <string name="username">用户邮箱</string>
    <string name="password">密码</string>
    <string name="exit">退出</string>
    <string name="ensureExit">确认退出</string>
    <string name="cancel">取消</string>
    <string name="ensure">确定</string>

</resources>